# cmake-pywhl

./: .clang-tidy  .gitattributes  .gitignore  .prettierrc.yaml  LICENSE  PyWhlConfig.cmake  README.md  build.py  build.sh  pyproject.toml
.github/workflows/: ci.yml
src/: PyWhlConfig.cmake  build.py  cmake_pywhl.py  editable_finder.py  pywhl.py
tests/: test.py  test_pywhl.py
tests/nanobind_example/: CMakeLists.txt  pyproject.toml  version_info.txt.in
tests/nanobind_example/config/: info1.txt  info2.txt
tests/nanobind_example/patches/: cpp_edit.patch  py_add.patch  py_edit.patch  upstream_source_change.patch
tests/nanobind_example/pyext/: __init__.py
tests/nanobind_example/pyext_config/: info1.txt  info2.txt
tests/nanobind_example/scripts/: __init__.py
tests/nanobind_example/tests/: inplace_file_changed_post_rebuild_test.py  inplace_file_changed_test.py  inplace_install_patterns.txt  inplace_py_add_test.py  whl_install_files.txt  whl_install_test.py
